--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "run-sequence": "^2.2.1"
   },
   "scripts": {
-    "start": "gulp",
+    "dev": "gulp",
     "build": "gulp build"
   },
   "dependencies": {
